--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
-    <title>OPCED</title>
+    <title>Hello, world!</title>
   </head>
   <body>
       <!-- nav -->
-    <div class="container">
+      <div class="container">
         <div class="backgrond">
             <div class="top-image">
             </div>
@@ -40,12 +40,12 @@
               </ul>
             </div>
         </nav>
-    </div>
+      </div>
     <!-- Welcome -->
     <section id="welcome">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-sm-6 col-md-6">
                     <h3 class="wel">WELCOME</h3>
                     <p class="wel_p">to one of the most <br>
                         advanced learning system</p>
@@ -53,36 +53,127 @@
                         <img src="images/down.png" alt="" width="200px" height="200px" class="who_img">
                     </div> -->
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6 col-md-6">
                     <img src="images/wel_group.png" alt="" class="wel_group">
                 </div>
             </div>
         </div>
     </section>
-
+    
     <!-- Who -->
     <section id="who">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6 col-md-6">
+                  <img src="images/who.png" alt="" width="495px" height="495px">
+              </div>
+              <div class="col-sm-6 col-md-6 details">
+                  <h3>Who are you?</h3>
+                  <p>OPCED Ltd. is an EdTech company. We provide multimedia content for the students <br>
+                      through a multi-featured app which is named after the schools. We are upgrading our <br>
+                      primitive education system to the modern technology-based education system by <br>
+                      providing attractive visual content & AR based content, 24/7 exam, doubts feed and <br>
+                      many more. We have content on every topic (English, Math, Science) of NCTB.
+                  </p>
+                  <p>We are also making a connection among all the students in our country. The students <br>
+                      can connect each other through our 100% verified Edu-social media. Not only students <br> but also teachers, parents and visitors can use the app. All the services are provided to <br>
+                      students through the schools.</p>
+                    <img src="images/rightD.png" alt="" width="150px" height="180px">
+              </div>
+          </div>
+      </div>
+    </section>
+    <!-- Future -->
+    <section id="future">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6 col-md-6 back">
+                  <p class="content_brand">DISCOVER THE <br>
+                      <span>FUTURE WITH US</span></p>
+                  <a href="pages/augmented.html"><button class="learnBtn">Learn More</button></a>
+                  <img src="images/Intersection.png" alt="">
+              </div>
+              <div class="col-sm-6 col-md-6 futureImage">
+                <img src="images/future.png" alt="" width="550px" height="450px" class="future1">
+                <!-- <img src="images/future2.png" alt="" width="550px" height="450px" class="future2"> -->
+            </div>
+          </div>
+      </div>
+    </section>
+    <!-- visual content -->
+    <section id="visual">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6 col-md-6">
+                  <img src="images/vis.png" alt="" width="550px" height="450px" class="center">
+              </div>
+              <div class="col-sm-6 col-md-6">
+                  <p class="content_brand">Teach your student with <br>
+                      <span>Visual Content</span></p>
+                  <a href="pages/augmented.html"><button class="learnBtn">Learn More</button></a>
+              </div>
+          </div>
+      </div>
+    </section>
+    <!-- own brand -->
+    <section id="ownBrand">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6 col-md-6">
+                  <p class="content_brand">Get A Multi-Featured App As Your<br>
+                      <span> Own Brand </span></p>
+                  <a href="pages/augmented.html"><button class="learnBtn">Learn More</button></a>
+                  <img src="images/dim.png" alt="" width="150px" height="180px" class="dim">
+              </div>
+              <div class="col-sm-6 col-md-6">
+                <img src="images/own.png" alt="" width="550px" height="450px" class="center">
+                <img src="images/dim.png" alt="" width="150px" height="180px" class="dimTwo">
+            </div>
+          </div>
+      </div>
+    </section>
+    <!-- Augmented -->
+    <section id="augmented">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6 col-md-6">
+                  <img src="images/augmented.png" alt="" width="550px" height="450px" class="center">
+              </div>
+              <div class="col-sm-6 col-md-6">
+                  <p class="content_brand">Explore the new era of EdTech with<br>
+                      <span>Augmented Reality</span></p>
+                  <a href="pages/augmented.html"><button class="learnBtn">Learn More</button></a>
+              </div>
+          </div>
+      </div>
+    </section>
+    <!-- market -->
+    <section id="market">
+      <div class="container">
+        <div class="status">
+          <p>Join with us and <br> <span>Disrupt the Market </span></p>
+          <a href="pages/market.html"><button class="learnBtn">Learn More</button></a>
+        </div>
+        <div class="fig">
+          <img src="images/market.png" alt="" height="750px">
+        </div>
+      </div>
+    </section>
+    <!-- brand -->
+    <section id="brand">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <img src="images/who.png" alt="" width="495px" height="495px">
+                <div class="col-sm-6 col-md-6">
+                    <img src="images/brand.png" alt="" width="550px" height="450px" class="center">
                 </div>
-                <div class="col-md-6 details">
-                    <h3>Who are you?</h3>
-                    <p>OPCED Ltd. is an EdTech company. We provide multimedia content for the students 
-                        through a multi-featured app which is named after the schools. We are upgrading our 
-                        primitive education system to the modern technology-based education system by 
-                        providing attractive visual content & AR based content, 24/7 exam, doubts feed and 
-                        many more. We have content on every topic (English, Math, Science) of NCTB.
-                        <br>
-                        We are also making a connection among all the students in our country. The students 
-                        can connect each other through our 100% verified Edu-social media. Not only students but also teachers, parents and visitors can use the app. All the services are provided to 
-                        students through the schools.</p>
+                <div class="col-sm-6 col-md-6">
+                    <p class="content_brand">Increase Your <span>Brand</span> Value <br>
+                        & Monthly <span>Revenue</span></p>
+                    <a href="pages/brand.html"><button class="learnBtn">Learn More</button></a>
                 </div>
             </div>
         </div>
     </section>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
