--- a/index.html
+++ b/index.html
@@ -90,12 +90,11 @@
               <div class="col-sm-6 col-md-6 back">
                   <p class="content_brand">DISCOVER THE <br>
                       <span>FUTURE WITH US</span></p>
-                  <a href="pages/augmented.html"><button class="learnBtn">Learn More</button></a>
+                  <a href="pages/future.html"><button class="learnBtn">Learn More</button></a>
                   <img src="images/Intersection.png" alt="">
               </div>
               <div class="col-sm-6 col-md-6 futureImage">
                 <img src="images/future.png" alt="" width="550px" height="450px" class="future1">
-                <!-- <img src="images/future2.png" alt="" width="550px" height="450px" class="future2"> -->
             </div>
           </div>
       </div>
@@ -110,7 +109,7 @@
               <div class="col-sm-6 col-md-6">
                   <p class="content_brand">Teach your student with <br>
                       <span>Visual Content</span></p>
-                  <a href="pages/augmented.html"><button class="learnBtn">Learn More</button></a>
+                  <a href="pages/visual.html"><button class="learnBtn">Learn More</button></a>
               </div>
           </div>
       </div>
