--- a/pages/brand.html
+++ b/pages/brand.html
@@ -33,11 +33,17 @@
         <img src="../images/brand/middle.png" alt="" width="1000px" height="815px">
     </div>
     <div class="bottom">
-        <div class="left">
-            <img src="../images/brand/leaf1.png" alt="" width="300px" height="300px">
-        </div>
-        <div class="right mr-auto">
-            <img src="../images/brand/leaf2.png" alt="" width="300px" height="300px">
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <div class="left">
+                    <img src="../images/brand/leaf1.png" alt="" width="300px" height="300px">
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <div class="right">
+                    <img src="../images/brand/leaf2.png" alt="" width="300px" height="300px">
+                </div>
+            </div>
         </div>
     </div>
 
