--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <div class="col-sm-6 col-md-6">
                   <p class="content_brand">Get A Multi-Featured App As Your<br>
                       <span> Own Brand </span></p>
-                  <a href="pages/augmented.html"><button class="learnBtn">Learn More</button></a>
+                  <a href="pages/mobile.html"><button class="learnBtn">Learn More</button></a>
                   <img src="images/dim.png" alt="" width="150px" height="180px" class="dim">
               </div>
               <div class="col-sm-6 col-md-6">
